[package]
name = "ore-cli-mod"
version = "0.4.12"
description = "A command line interface for the Ore program."
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "ore"
path = "src/main.rs"

[features]
default = ["ore"]
admin = []
ore = ["dep:ore"]
orz = ["dep:orz"]

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
cached = "0.46.1"
cfg-if = "1.0.0"
chrono = "0.4.34"
clap = { version = "4.4.12", features = ["derive"] }
crossbeam = "0.8.4"
futures = "0.3.30"
log = "0.4"
num-traits = "0.2"
ore = { version = "1.2.1", package = "ore-program", optional = true }
orz = { version = "1.2.0", package = "orz-program", optional = true }
rand = "0.8.4"
sha256 = "1.5.0"
solana-account-decoder = "^1.16"
solana-cli-config = "1.18.5"
solana-client = "^1.16"
solana-program = "^1.16"
solana-rpc-client-api = "^1.16"
solana-sdk = "^1.16"
solana-transaction-status = "^1.16"
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
spl-token = { version = "^4", features = ["no-entrypoint"] }
sysinfo = "0.30.10"
tokio = "1.35.1"